WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209674
[StressGC] ASSERTION FAILED: m_wrapper under WebCore::MediaRecorder::dispatchError
https://bugs.webkit.org/show_bug.cgi?id=209674
Summary
[StressGC] ASSERTION FAILED: m_wrapper under WebCore::MediaRecorder::dispatch...
Chris Dumez
Reported
2020-03-27 12:10:48 PDT
ASSERTION FAILED: m_wrapper under WebCore::MediaRecorder::dispatchError: ASSERTION FAILED: m_wrapper ./bindings/js/JSEventListener.h(123) : JSC::JSObject *WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext &) const 1 0x11505a0b9 WTFCrash 2 0x1276c688b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1298819f8 WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext&) const 4 0x129880d1b WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) 5 0x129ece87c WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::DumbPtrTraits<WebCore::RegisteredEventListener> >, 1ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) 6 0x129ecab12 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 7 0x129ece45d WebCore::EventTarget::dispatchEvent(WebCore::Event&) 8 0x12927f7e3 WebCore::MediaRecorder::dispatchError(WebCore::Exception&&) 9 0x129289cf7 WebCore::MediaRecorder::didAddOrRemoveTrack()::$_5::operator()() const 10 0x129289c49 WTF::Detail::CallableWrapper<WebCore::MediaRecorder::didAddOrRemoveTrack()::$_5, void>::call() 11 0x1276d40fa WTF::Function<void ()>::operator()() const 12 0x12928a8f9 WebCore::MediaRecorder::scheduleDeferredTask(WTF::Function<void ()>&&)::$_7::operator()() const 13 0x12928a659 WTF::Detail::CallableWrapper<WebCore::MediaRecorder::scheduleDeferredTask(WTF::Function<void ()>&&)::$_7, void>::call() 14 0x1276d40fa WTF::Function<void ()>::operator()() const 15 0x129ebee29 WebCore::EventLoopFunctionDispatchTask::execute() 16 0x129ebc3ca WebCore::EventLoop::run() 17 0x12a017c20 WebCore::WindowEventLoop::didReachTimeToRun() 18 0x12a01ad61 decltype(*(std::__1::forward<WebCore::WindowEventLoop*&>(fp0)).*fp()) std::__1::__invoke<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&, void>(void (WebCore::WindowEventLoop::*&&&)(), WebCore::WindowEventLoop*&&&) 19 0x12a01ace0 std::__1::__bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<> >::value>::type std::__1::__apply_functor<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, 0ul, std::__1::tuple<> >(void (WebCore::WindowEventLoop::*&)(), std::__1::tuple<WebCore::WindowEventLoop*>&, std::__1::__tuple_indices<0ul>, std::__1::tuple<>&&) 20 0x12a01ac8c std::__1::__bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<> >::value>::type std::__1::__bind<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*>::operator()<>() 21 0x12a01ac29 WTF::Detail::CallableWrapper<std::__1::__bind<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*>, void>::call() 22 0x1276d40fa WTF::Function<void ()>::operator()() const 23 0x12778cee9 WebCore::Timer::fired() 24 0x12accb2ea WebCore::ThreadTimers::sharedTimerFiredInternal() 25 0x12acd2ec1 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 26 0x12acd2e79 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 27 0x1276d40fa WTF::Function<void ()>::operator()() const 28 0x12ac98ff7 WebCore::MainThreadSharedTimer::fired() 29 0x12ad2d486 WebCore::timerFired(__CFRunLoopTimer*, void*) 30 0x7fff4f3805d5 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 31 0x7fff4f380181 __CFRunLoopDoTimer
Attachments
Patch
(4.68 KB, patch)
2020-03-27 12:13 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-03-27 12:11:16 PDT
<
rdar://problem/60541201
>
Chris Dumez
Comment 2
2020-03-27 12:13:27 PDT
Created
attachment 394744
[details]
Patch
EWS
Comment 3
2020-03-27 13:33:32 PDT
Committed
r259135
: <
https://trac.webkit.org/changeset/259135
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394744
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug