[StressGC] ASSERTION FAILED: m_wrapper under WebCore::MediaRecorder::dispatchError https://bugs.webkit.org/show_bug.cgi?id=209674 <rdar://problem/60541201>

Reviewed by Darin Adler.

Keep the MediaRecorder wrapper alive while its state is not inactive (i.e. it is recording
or paused), as it may still dispatch events.

Also drop MediaRecorder::scheduleDeferredTask() and use the utility functions in
ActiveDOMObject instead to achieve the same thing.

No new tests, already covered by http/wpt/mediarecorder/MediaRecorder-onremovetrack.html.

* Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::suspend):
(WebCore::MediaRecorder::stopRecording):
(WebCore::MediaRecorder::didAddOrRemoveTrack):
(WebCore::MediaRecorder::hasPendingActivity const):
(WebCore::MediaRecorder::scheduleDeferredTask): Deleted.
* Modules/mediarecorder/MediaRecorder.h:


Canonical link: https://commits.webkit.org/222602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259135 268f45cc-cd09-0410-ab3c-d52691b4dbfc